update react to 0.14, redux to 3.0, and supporting libs

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -4,5 +4,7 @@
     <script type="text/javascript" src="javascripts/bundle.js"></script>
   </head>
   <body>
+    <div id='watif-reader'>
+    </div>
   </body>
 </html>
