get basic jailed worker running

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <body>
 <div id="app"></div>
 <script src="js/bundle.js"></script>
-<script src="stories/house-sitting.js"></script>
+<!-- <script src="stories/house-sitting.js"></script> -->
 </body>
